// Written by yijian on 2024/01/21
syntax = "proto3";
package mooon_auth;

// 当 protoc-gen-go 版本大于 1.4.0 时需加上 go_package，否则编译报错“unable to determine Go import path for”
option go_package = "./mooon_auth";

// Cookie
// 注意同 mooon_login.proto 中的保持完全相同
message Cookie {
  string name = 1;
  string value = 2;
  string path = 3;
}

// 鉴权请求消息
message AuthReq {
  string body = 1; // 鉴权请求体，建议为 json 格式的数据
}

// 鉴权响应消息
message AuthResp {
  repeated Cookie http_cookies = 1; // 写入 cookie 的数据，这些信息将传给后端服务
  map<string, string> http_headers = 2; // 写入 http 头的数据
}

// 鉴权（authentication）服务定义
service MooonAuth {
  rpc authenticate(AuthReq) returns(AuthResp);
}
